mdmCeneveo/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ABI__c</fullName>
        <label>ABI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_Create_Date__c</fullName>
        <label>ACT! Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_Customer__c</fullName>
        <label>ACT! Customer</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_Edit_Date__c</fullName>
        <label>ACT! Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT_ID_Status__c</fullName>
        <label>ACT! ID/Status</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_Last_Results__c</fullName>
        <label>ACT! Last Results</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_Owner__c</fullName>
        <description>Need to transfer from Owner Names</description>
        <label>ACT! Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_RecordMgr__c</fullName>
        <label>ACT! RecordMgr</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_Referred_by__c</fullName>
        <description>Add Source to Account</description>
        <label>ACT! Referred by</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_X_Activities__c</fullName>
        <label>ACT! X Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_X_History__c</fullName>
        <label>ACT! X History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_X_Notes__c</fullName>
        <label>ACT! X Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Monitor__c</fullName>
        <formula>IF
(ISNULL(LastActivityDate),
IMAGE(&quot;/img/samples/color_red.gif &quot;, &quot;NO ACTIVITIES&quot;,15,15),
IF( Days_Since_Last_Activity__c &lt;15,
IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 30&quot;,15,15) ,
IF( Days_Since_Last_Activity__c &lt; 30,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;30 to 45&quot;,15,15),
IF( Days_Since_Last_Activity__c &gt;29,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;45 to 60&quot;,15,15) ,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,15,15)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green: Activity &lt; 15 Days

Yellow: Activity &gt; 15 Days

Red: Activity &gt;45 Days</inlineHelpText>
        <label>Activity Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type_ID__c</fullName>
        <label>Address Type ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Valid_From_Date__c</fullName>
        <label>Address Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Valid_to_Date__c</fullName>
        <label>Address Valid to Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asst_Phone__c</fullName>
        <label>Asst - Phone</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bounce_Description__c</fullName>
        <label>Bounce Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bounce_Reason__c</fullName>
        <label>Bounce Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCR CLAM 2 app multiple merge - use this field to flag a single record as the master record, i.e. the record to be kept and all duplicate data to be merged onto within a duplicate set</description>
        <label>Set Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Number__c</fullName>
        <description>CCR CLAM 2 app multiple merge - use this field to group duplicates together, i.e. give each set of duplicates its own unique set number and populate this field with that number for each of the duplicates in the set</description>
        <label>Set Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCR CLAM 2 app multiple merge - this field is used by the CCR CLAM app to flag a duplicate set as having finished merge processing</description>
        <label>Set Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVO_Contact_Email__c</fullName>
        <label>CVO - Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CVO_Contact_Mobile__c</fullName>
        <label>CVO - Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CVO_Contact_Phone__c</fullName>
        <label>CVO - Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CVO_First_Name__c</fullName>
        <label>CVO - First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Last_Name__c</fullName>
        <label>CVO - Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>This field indicates the status of the contact to the Account we have them aligned to.</description>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer with company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>today() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dear__c</fullName>
        <label>Dear</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <description>Field to indicate if the contact is a decision maker to purchase within the Account.</description>
        <inlineHelpText>Does this contact have decision making authority?</inlineHelpText>
        <label>Decision Maker</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education_Information__c</fullName>
        <description>The educational background of the contact.</description>
        <inlineHelpText>What educational background has the contact attained?</inlineHelpText>
        <label>Education Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Type_ID__c</fullName>
        <label>Email Type ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entertainment_Restrictions__c</fullName>
        <description>Does the contact have restrictions on business related entertainment</description>
        <inlineHelpText>Does the contact have restrictions on Business Entertainment</inlineHelpText>
        <label>Entertainment Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ethnicity_type__c</fullName>
        <label>Ethnicity type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Information__c</fullName>
        <description>Information about the contacts family.</description>
        <label>Family Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gender_Type__c</fullName>
        <label>Gender Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Membership__c</fullName>
        <label>Group Membership</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <description>Hobbies the contact is interested in.</description>
        <inlineHelpText>What hobbies does this contact participate or enjoy doing?</inlineHelpText>
        <label>Hobbies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_Calling_Code__c</fullName>
        <label>International Calling Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Employe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Employe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_In_Profile__c</fullName>
        <label>Linked In Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_A__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>M&amp;A</label>
        <referenceTo>M_A__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEC_SF_Contact_ID__c</fullName>
        <description>This is the assigned value within the NEC Salesforce system. 
Once converted and operational we can remove this field.</description>
        <label>NEC - SF Contact ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ok_to_use_as_reference__c</fullName>
        <description>The contact is or is not will to be used as a reference.</description>
        <inlineHelpText>Can we use this contact has a personal reference?</inlineHelpText>
        <label>Ok to use as reference</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type_ID__c</fullName>
        <label>Phone Type ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prim_LOB__c</fullName>
        <description>Add SIC Description</description>
        <label>Prim-LOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prim_SIC__c</fullName>
        <description>Add SIC Code</description>
        <label>Prim - SIC</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_SF_Contact_ID__c</fullName>
        <label>Prod SF Contact ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Type__c</fullName>
        <label>Profile Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_URL__c</fullName>
        <label>Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Province_ID__c</fullName>
        <label>Province ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Type__c</fullName>
        <label>Race Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsbility_Type__c</fullName>
        <label>Responsbility Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>To be Defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Resource</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Contact_ID__c</fullName>
        <formula>Id &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1) &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1) &amp;
MID(
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,
MIN(FIND(MID(Id, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 +
MIN(FIND(MID(Id, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 +
MIN(FIND(MID(Id, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 +
MIN(FIND(MID(Id, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 +
MIN(FIND(MID(Id, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSNumber__c</fullName>
        <label>SSNumber</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_Address__c</fullName>
        <label>Skype Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Profile__c</fullName>
        <label>Twitter Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Undelivered_Time__c</fullName>
        <label>Undelivered Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>oo__OpportunityOptimizerChange__c</fullName>
        <description>This field is included with Sales Optimizer - Opportunity to allow validation rules to be coded to allow inserts by the PowerChart.</description>
        <label>OpportunityOptimizerChange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uas__Active_User__c</fullName>
        <formula>if(uas__User__r.IsActive,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <inlineHelpText>If this Contact is associated with a User record, this field displays whether or not the User record is Active.</inlineHelpText>
        <label>Active User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uas__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is by the User Contact Sync application by Applied Concepts Institute.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>